# zotify

./: .gitignore  INSTALLATION.md  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml
zotify/: __init__.py  __main__.py  _zeroconf.py  album.py  api.py  app.py  config.py  const.py  credential_manager.py  metadata.py  playlist.py  podcast.py  termoutput.py  track.py  utils.py  zotify.py
