[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "zotify"
description = "A highly customizable music and podcast downloader"
authors = [
  { name = "Zotify Contributors" },
  { name = "Googolplexed" },
  { name = "Mahmoud (qMvhmoud)" }
]
requires-python = ">=3.10"
license = "Unlicense"
license-files = ["LICENSE"]
readme = "README.md"
keywords = ["python", "music", "podcast", "downloader"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
dependencies = [
  "librespot-spotizerr",
  "ffmpy",
  "music_tag",
  "pkce",
  "protobuf==3.20.1",
  "pwinput",
  "tabulate[widechars]",
  "tqdm"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "zotify.__version__"}

[project.scripts]
zotify = "zotify.__main__:main"
